Refector Rich Text controller and util